Project

General

Profile

Actions

Bug #18298

closed

mon: force_create_pg could leave pg stuck in creating state

Added by Sage Weil over 7 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
High
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
kraken,jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

If the osdmap didn't update, we would have the pg in creating state but no mapping and the osd wouldn't get the pg create message until the osdmap rolled over.


Related issues 2 (0 open2 closed)

Copied to Ceph - Backport #19181: kraken: mon: force_create_pg could leave pg stuck in creating stateResolvedShinobu KinjoActions
Copied to Ceph - Backport #19182: jewel: mon: force_create_pg could leave pg stuck in creating stateResolvedAlexey SheplyakovActions
Actions #1

Updated by Kefu Chai about 7 years ago

  • Assignee set to Sage Weil
Actions #2

Updated by Sage Weil about 7 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler about 7 years ago

  • Copied to Backport #19181: kraken: mon: force_create_pg could leave pg stuck in creating state added
Actions #4

Updated by Nathan Cutler about 7 years ago

  • Copied to Backport #19182: jewel: mon: force_create_pg could leave pg stuck in creating state added
Actions #5

Updated by Nathan Cutler over 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF