mon/PGMonitor: fix force_create_pg

We weren't carefully registering the creating PG.  In
particular, the current osd mappings (acting, up, etc.)
weren't getting filled in, which meant the PG wasn't
(necessarily) mapped to an OSD until the OSDMap updated
and we recalculated mappings.

Fix by sending us through the common code path so that
all fields get updated properly.

Fixes: http://tracker.ceph.com/issues/18298
Signed-off-by: Sage Weil <sage@redhat.com>
(cherry picked from commit 9a41a0b7289fa59f4b747a63e152e88af6e8abd5)

Conflicts:
	src/mon/PGMonitor.cc